asignment2-initial/.metals/metals.log
2023.03.12 11:49:24 INFO  Started: Metals version 0.11.11 in workspace '/Users/bientran/Downloads/asignment2-initial' for client Visual Studio Code 1.76.0.[0m
SLF4J: No SLF4J providers were found.
SLF4J: Defaulting to no-operation (NOP) logger implementation
SLF4J: See https://www.slf4j.org/codes.html#noProviders for further details.
SLF4J: Class path contains SLF4J bindings targeting slf4j-api versions 1.7.x or earlier.
SLF4J: Ignoring binding found at [jar:file:/Users/bientran/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/com/outr/scribe-slf4j_2.13/3.11.0/scribe-slf4j_2.13-3.11.0.jar!/org/slf4j/impl/StaticLoggerBinder.class]
SLF4J: See https://www.slf4j.org/codes.html#ignoredBindings for an explanation.
2023.03.12 11:49:25 INFO  time: initialize in 0.56s[0m
2023.03.12 11:49:28 WARN  Build server is not auto-connectable.[0m
2023.03.12 11:49:28 WARN  no build tool detected in workspace '/Users/bientran/Downloads/asignment2-initial'. The most common cause for this problem is that the editor was opened in the wrong working directory, for example if you use sbt then the workspace directory should contain build.sbt. [0m
2023.03.12 11:49:28 WARN  no build target for: /Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Parser.java[0m
Mar 12, 2023 11:49:30 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 6
2023.03.12 11:49:33 INFO  time: code lens generation in 4.46s[0m
2023.03.12 11:49:51 WARN  no build target for: /Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java[0m
Mar 12, 2023 11:49:51 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint fallbackResponseError
SEVERE: Internal error: org.eclipse.jdt.core.compiler.InvalidInputException: Invalid_Character_Constant
java.util.concurrent.CompletionException: org.eclipse.jdt.core.compiler.InvalidInputException: Invalid_Character_Constant
	at java.base/java.util.concurrent.CompletableFuture.encodeThrowable(CompletableFuture.java:332)
	at java.base/java.util.concurrent.CompletableFuture.completeThrowable(CompletableFuture.java:347)
	at java.base/java.util.concurrent.CompletableFuture$UniAccept.tryFire(CompletableFuture.java:708)
	at java.base/java.util.concurrent.CompletableFuture.postComplete(CompletableFuture.java:510)
	at java.base/java.util.concurrent.CompletableFuture.completeExceptionally(CompletableFuture.java:2162)
	at scala.meta.internal.metals.CancelTokens$.$anonfun$future$1(CancelTokens.scala:40)
	at scala.meta.internal.metals.CancelTokens$.$anonfun$future$1$adapted(CancelTokens.scala:38)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:484)
	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.base/java.lang.Thread.run(Thread.java:833)
Caused by: org.eclipse.jdt.core.compiler.InvalidInputException: Invalid_Character_Constant
	at org.eclipse.jdt.internal.core.util.PublicScanner.getNextToken(PublicScanner.java:1442)
	at scala.meta.internal.parsing.JavaFoldingRangeExtractor.next$1(JavaFoldingRangeExtractor.scala:100)
	at scala.meta.internal.parsing.JavaFoldingRangeExtractor.gather$1(JavaFoldingRangeExtractor.scala:147)
	at scala.meta.internal.parsing.JavaFoldingRangeExtractor.extract(JavaFoldingRangeExtractor.scala:155)
	at scala.meta.internal.parsing.FoldingRangeProvider.$anonfun$getRangedForJava$2(FoldingRangeProvider.scala:48)
	at scala.Option$WithFilter.map(Option.scala:242)
	at scala.meta.internal.parsing.FoldingRangeProvider.getRangedForJava(FoldingRangeProvider.scala:43)
	at scala.meta.internal.metals.MetalsLspService.$anonfun$foldingRange$3(MetalsLspService.scala:1776)
	at scala.concurrent.Future$.$anonfun$apply$1(Future.scala:678)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	... 3 more

2023.03.12 11:49:52 WARN  Running javac-semanticdb failed for file:///Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java. Output:
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:3: error: class, interface, enum, or record expected
from lexererr import *
^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:3: error: <identifier> expected
from lexererr import *
                    ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:3: error: ';' expected
from lexererr import *
                      ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:162: error: empty character literal
			self.text = self.text.replace('_','');
			                                  ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:169: error: empty character literal
			 self.text = self.text.replace('_',''); 
			                                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:172: error: empty character literal
			 self.text = self.text.replace('_',''); 
			                                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:175: error: empty character literal
			 self.text = self.text.replace('_',''); 
			                                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:178: error: empty character literal
			 self.text = self.text.replace('_',''); 
			                                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:185: error: ']' expected
			self.text = self.text[1:-1]
			                       ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:192: error: ';' expected
			raise UncloseString(self.text[1:])
			                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:192: error: ']' expected
			raise UncloseString(self.text[1:])
			                               ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:192: error: not a statement
			raise UncloseString(self.text[1:])
			                             ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:199: error: ';' expected
			raise IllegalEscape(self.text[1:])
			                   ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:199: error: ']' expected
			raise IllegalEscape(self.text[1:])
			                               ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:199: error: not a statement
			raise IllegalEscape(self.text[1:])
			                             ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:206: error: ';' expected
			raise ErrorToken(self.text)
			                ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:206: error: not a statement
			raise ErrorToken(self.text)
			                     ^
/Users/bientran/Downloads/asignment2-initial/src/main/mt22/parser/MT22Lexer.java:206: error: ';' expected
			raise ErrorToken(self.text)
			                          ^
18 errors[0m
Mar 12, 2023 11:58:19 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 33
Mar 12, 2023 12:31:09 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Mar 12, 2023 12:31:11 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Mar 12, 2023 3:53:37 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 52
Mar 12, 2023 3:53:37 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 54
Mar 12, 2023 4:29:09 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 55
Mar 12, 2023 4:29:09 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 56
Mar 12, 2023 4:29:09 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNING: Unmatched cancel notification for request id 58
Mar 13, 2023 7:58:32 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
Mar 13, 2023 7:58:33 PM org.eclipse.lsp4j.jsonrpc.services.GenericEndpoint notify
INFO: Unsupported notification method: $/setTrace
2023.03.14 14:33:40 INFO  Shutting down server[0m
2023.03.14 14:33:40 INFO  shutting down Metals[0m
2023.03.14 14:33:40 INFO  Exiting server[0m
